[package]
name = "loramesh"
version = "0.1.1"
authors = ["crockpotveggies <crockpotveggies@users.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3

[dependencies]
config = "0.10.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
enumn = "0.1.2"
format_escape_default = "0.1.1"
hex = "0.4.0"
log = "0.4"
lz4 = "1.24.0"
lz4_flex = "0.11.2"
network-interface = "1.1.1"
nonzero_ext = "0.2.0"
packet = "0.1.2"
petgraph = "0.5.0"
pingora = "0.1.0"
rand = "0.7.3"
ratelimit_meter = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serialport = "3.3.0"
simplelog = {version = "^0.7.4", default-features = false}
tun-tap = "0.1.4"

[dev-dependencies]
